# agent

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml  setup.py
.devcontainer/: .env  .env.template  Dockerfile  devcontainer-single.json  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  codecov.yml  pypi.yml
app/: CMakeLists.txt  agent_app.cpp
config/: client.json
doc/: CMakeLists.txt  conf.py  index.rst  requirements-rtd.txt
docker/: docker-compose.yml
examples/: CMakeLists.txt  README.md  basic_worker.cpp  custom_worker.cpp  functional_worker.cpp
include/agent/: Buffer.hpp  FWorker.hpp  IAMQPWorker.hpp  IAMQPWorkerSSL.hpp  IConnectionHandler.hpp  IConnectionHandlerSSL.hpp  IWorker.hpp  SymbolMaps.hpp  Worker.hpp  agent.hpp  agent_config.hpp.in
python/: CMakeLists.txt  agent_python.cpp  pytest.ini
python/tests/: test_python_bindings.py
src/: AMQPWorker.cpp  AMQPWorker.hpp  Buffer.cpp  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.hpp  FWorker.cpp  FWorker.hpp  IAMQPWorker.cpp  IAMQPWorker.hpp  IAMQPWorkerSSL.cpp  IAMQPWorkerSSL.hpp  IConnectionHandler.cpp  IConnectionHandler.hpp  IConnectionHandlerSSL.cpp  IConnectionHandlerSSL.hpp  IMessage.hpp  IWorker.cpp  IWorker.hpp  Message.fbs  SymbolMaps.hpp  TWorker.cpp  TWorker.hpp  Worker.cpp  Worker.hpp  agent.cpp
tests/: CMakeLists.txt  SSLTestClient.cpp  SSLTestServer.cpp  agent_t.cpp
